fix footer text overflow

--- a/front_end/application/assets/css/style.css
+++ b/front_end/application/assets/css/style.css
@@ -82,3 +82,7 @@ footer ul {
     list-style: none;
     display: inline-block;
 }
+
+footer ul li {
+    word-break: break-all;
+}
